# PysonalFinance

./: README.md  pyproject.toml
pysonal_finance/: manage.py
pysonal_finance/pysonal_finance/: asgi.py  settings.py  urls.py  wsgi.py
