[tool.poetry]
name = "pysonalfinance"
version = "0.1.0"
description = "Python Package for Personal Finance"
authors = ["Ryan Downing <ryansdowning1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
